--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head>
-	<title>Home | ATOM Digital</title>
-	<meta name="description" content="ATOM">
+<head><title>ATOM Digital - Local Business Software Consultants</title>
+	<meta name="description" content="Software consultancy helping businesses in Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -41,7 +40,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -94,11 +93,11 @@
   </article><article>
     <a href="/examples-of-digital-transformation/" class="link">
       <span class="image">
-        <img src="assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg" alt="Examples" />
+        <img src="assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg" alt="Examples of Digital Transformation" />
       </span>
     </a>
       <header class="major">
-        <h2>Examples</h2>
+        <h2>Examples of Digital Transformation</h2>
         <p>There are many ways that ATOM Digital can help your business.</p>
       </header>
   </article><article>
