--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -14,8 +14,8 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head>
-	<title>2022/2023 Software Consultancy Rate Card -  Australia | ATOM Digital</title>
+<head><title>2022/2023 Software Consultancy Rate Card -  Australia | ATOM Digital</title>
+	
 	<meta name="description" content="Software Consultancy Rate Card Australia | ATOM Digital">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -42,7 +42,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
