--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -14,8 +14,8 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head>
-	<title>Examples | ATOM Digital</title>
+<head><title>Examples of Digital Transformation | ATOM Digital</title>
+	
 	<meta name="description" content="Examples of digital transformation programs that we deliver for our clients.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -42,7 +42,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -59,7 +59,7 @@
 			
 			<div class="inner">
 				<header class="major">
-					<h1>Examples</h1>
+					<h1>Examples of Digital Transformation</h1>
 				</header>
 				There are many ways that ATOM Digital can help your business.
 				<span class="image main"><img src="/assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg"
