--- a/your-url/index.html
+++ b/your-url/index.html
@@ -35,14 +35,14 @@
 
 <!-- Header -->
 <header id="header"class="alt">
-	<a href="/" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
+	<a href="http://atomdigital.com.au//" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="/what-we-do/">What we do</a></li><li><a href="/services/">Our Services</a></li><li><a href="/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="http://atomdigital.com.au//" class="link">Home</a></li><li><a href="http://atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="http://atomdigital.com.au/services/">Our Services</a></li><li><a href="http://atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="http://atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -178,7 +178,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="http://atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
@@ -192,12 +192,12 @@
 
 </body>
 <!-- Scripts -->
-<script src="/assets/js/jquery.min.js"></script>
-<script src="/assets/js/jquery.scrolly.min.js"></script>
-<script src="/assets/js/jquery.scrollex.min.js"></script>
-<script src="/assets/js/skel.min.js"></script>
-<script src="/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="/assets/js/main.js"></script>
+<script src="http://atomdigital.com.au/assets/js/jquery.min.js"></script>
+<script src="http://atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
+<script src="http://atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
+<script src="http://atomdigital.com.au/assets/js/skel.min.js"></script>
+<script src="http://atomdigital.com.au/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="http://atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="http://atomdigital.com.au/assets/js/main.js"></script>
 
 </html>
