--- a/landing/index.html
+++ b/landing/index.html
@@ -34,14 +34,14 @@
 
 <!-- Header -->
 <header id="header"class="alt style2">
-	<a href="http://atomdigital.com.au//" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
+	<a href="https://www.atomdigital.com.au//" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="http://atomdigital.com.au//" class="link">Home</a></li><li><a href="http://atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="http://atomdigital.com.au/services/">Our Services</a></li><li><a href="http://atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="http://atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="https://www.atomdigital.com.au//" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -55,7 +55,7 @@
     <section id="banner" class="style2">
         <div class="inner">
             <span class="image">
-                <img src="/assets/images/pic07.jpg" alt="">
+                <img src="//assets/images/pic07.jpg" alt="">
             </span>
             <header class="major">
 
@@ -260,7 +260,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="http://atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
