--- a/generic/index.html
+++ b/generic/index.html
@@ -34,14 +34,14 @@
 
 <!-- Header -->
 <header id="header"class="alt">
-	<a href="http://atomdigital.com.au//" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
+	<a href="https://www.atomdigital.com.au//" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="http://atomdigital.com.au//" class="link">Home</a></li><li><a href="http://atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="http://atomdigital.com.au/services/">Our Services</a></li><li><a href="http://atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="http://atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="https://www.atomdigital.com.au//" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -62,7 +62,7 @@
 				<header class="major">
 					<h1>Generic</h1>
 				</header>
-				<span class="image main"><img src="/assets/images/pic11.jpg"
+				<span class="image main"><img src="//assets/images/pic11.jpg"
 						alt="" /></span>
 				<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
 
@@ -184,7 +184,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="http://atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
@@ -198,12 +198,12 @@
 
 </body>
 <!-- Scripts -->
-<script src="http://atomdigital.com.au/assets/js/jquery.min.js"></script>
-<script src="http://atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
-<script src="http://atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
-<script src="http://atomdigital.com.au/assets/js/skel.min.js"></script>
-<script src="http://atomdigital.com.au/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="http://atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="http://atomdigital.com.au/assets/js/main.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/jquery.min.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="https://www.atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="https://www.atomdigital.com.au/assets/js/main.js"></script>
 
 </html>
