--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -35,14 +35,14 @@
 
 <!-- Header -->
 <header id="header"class="alt">
-	<a href="http://atomdigital.com.au//" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
+	<a href="https://www.atomdigital.com.au//" class="logo"><strong>ATOM</strong> <span>Digital</span></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="http://atomdigital.com.au//" class="link">Home</a></li><li><a href="http://atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="http://atomdigital.com.au/services/">Our Services</a></li><li><a href="http://atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="http://atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="https://www.atomdigital.com.au//" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -62,7 +62,7 @@
 					<h1>What we do</h1>
 				</header>
 				We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.
-				<span class="image main"><img src="/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
+				<span class="image main"><img src="//assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
 					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
 				<p>ATOM Digital is a business software consultancy.</p>
@@ -193,7 +193,7 @@ We act as an extension of our client’s team and provide the skills and experti
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="http://atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
@@ -207,12 +207,12 @@ We act as an extension of our client’s team and provide the skills and experti
 
 </body>
 <!-- Scripts -->
-<script src="http://atomdigital.com.au/assets/js/jquery.min.js"></script>
-<script src="http://atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
-<script src="http://atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
-<script src="http://atomdigital.com.au/assets/js/skel.min.js"></script>
-<script src="http://atomdigital.com.au/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="http://atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="http://atomdigital.com.au/assets/js/main.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/jquery.min.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
+<script src="https://www.atomdigital.com.au/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="https://www.atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="https://www.atomdigital.com.au/assets/js/main.js"></script>
 
 </html>
