--- a/elements/index.html
+++ b/elements/index.html
@@ -585,7 +585,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 </body>
 <!-- Scripts -->
-<script src="https://www.atomdigital.com.au/assets/js/jquery.min.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
