--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -207,7 +207,7 @@ We act as an extension of our client’s team and provide the skills and experti
 
 </body>
 <!-- Scripts -->
-<script src="https://www.atomdigital.com.au/assets/js/jquery.min.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
