--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -453,7 +453,7 @@
 
 </body>
 <!-- Scripts -->
-<script src="https://www.atomdigital.com.au/assets/js/jquery.min.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
 <script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
