--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
 					<h1>About Us</h1>
 				</header>
 				About ATOM Digital<br>Business Software Consultancy
-				<span class="image main"><img src="//assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
+				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
 					alt="A team of people working at a desk on laptops" /></span>
 				<span id="scroller"></span>
 				<p>ATOM Digital helps our clients to adopt digital tools and solutions that increase sales, reduce costs and improve productivity.</p>
