--- a/services/index.html
+++ b/services/index.html
@@ -62,7 +62,7 @@
 					<h1>Our Services</h1>
 				</header>
 				Working with ATOM Digital gives our clients access to specialists, technical resources.
-				<span class="image main"><img src="//assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg"
+				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg"
 					alt="Mobile device showing a chart going upwards" /></span>
 				<span id="scroller"></span>
 				<p>It allows our clients to focus on what they do best -  running their business -  while we own and manage their technical landscape.</p>
