--- a/examples-of-digital-transformation/index.html
+++ b/examples-of-digital-transformation/index.html
@@ -62,7 +62,7 @@
 					<h1>Examples of Digital Transformation</h1>
 				</header>
 				There are many ways that ATOM Digital can help your business.
-				<span class="image main"><img src="//assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg"
+				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg"
 					alt="" /></span>
 				<span id="scroller"></span>
 				
