--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -62,7 +62,7 @@
 					<h1>What we do</h1>
 				</header>
 				We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.
-				<span class="image main"><img src="//assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
+				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
 					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
 				<p>ATOM Digital is a business software consultancy.</p>
