--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -61,7 +61,7 @@
 				<header class="major">
 					<h1>About Us</h1>
 				</header>
-				About ATOM Digital<br>Business Software Consultancy
+				About ATOM Digital - Business Software Consultancy
 				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
 					alt="A team of people working at a desk on laptops" /></span>
 				<span id="scroller"></span>
@@ -202,7 +202,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
