--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -143,6 +143,18 @@
       <td data-label="Minimum Hours">10</td>
       <td data-label="SFIA Levels"><a href="https://sfia-online.org/en/sfia-8/responsibilities/level-7" target="_blank">SFIA Level 7</a></td>
     </tr>
+       <tr>
+      <td data-label="Engagement Type"><strong>Onsite Meeting</strong><br />Travel Time</td>
+      <td data-label="Rate Ex GST">$30<span class="small-number">.00</span> per 15 minutes</td>
+      <td data-label="Notes" class="rate-examples"><br />
+        <ul>
+          <li>Not charged for full days of work</li>
+          <li>Includes fuel, tolls and parking</li>
+        </ul>
+      </td>
+      <td data-label="Minimum Time">30 mins</td>
+      <td></td>
+    </tr>
   </tbody>
 </table>
 
