--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -14,7 +14,7 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head><title>2022/2023 Software Consultancy Rate Card -  Australia | ATOM Digital</title>
+<head><title>Software Consultancy Rate Card - Australia | ATOM Digital</title>
 	
 	<meta name="description" content="Software Consultancy Rate Card Australia | ATOM Digital">
 	<meta charset="utf-8" />
