--- a/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/opening.html
+++ b/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/opening.html
@@ -14,8 +14,18 @@
 
 		<h2 id="indoor-setup">Indoor Setup</h2>
 <ol>
-  <li>Turn all inside and outside lights on in both sections. Dimmed them all up</li>
-  <li><strong>HOT DAYS</strong>: Keep all doors shut and turn on ALL A/C (Bar, Capri  A/c, Sorrento front and back A/C)</li>
+  <li>
+    <p>Turn all inside lights - bottom row in Power Cupboard
+<img src="/assets/images/bott/Lightswitches.jpg" alt="Internal Light Switches" class="img-responsive" /></p>
+  </li>
+  <li>
+    <p>Turn on outside lights and heaters if it is cold. Dimmed them all up
+<img src="/assets/images/bott/outsidelights.jpg" alt="External Light Switches" class="img-responsive" /></p>
+  </li>
+  <li>
+    <p><strong>HOT DAYS</strong>: Keep all doors shut and turn on ALL A/C (Bar, Capri  A/c, Sorrento front and back A/C)
+<img src="/assets/images/bott/airconditioning.jpg" alt="Air Conditioning" class="img-responsive" /></p>
+  </li>
   <li>Lay out the front mat</li>
   <li>Check the bookings of the day on the Booking Tablet. <strong>Code 101071</strong>
     <ul>
