Adding more procedures

--- a/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing.html
+++ b/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing.html
@@ -12,25 +12,33 @@
             <h2>Checklist for closing the restaurant</h2>
 		</header>
 
-		<h2 id="indoor-closing">Indoor Closing</h2>
-<ol>
-  <li>Step 1</li>
-  <li>Step 2</li>
-  <li>Step 3</li>
-</ol>
-
-<h2 id="outside-setup">Outside Setup</h2>
-<ol>
-  <li>Step 1</li>
-  <li>Step 2</li>
-  <li>Step 3</li>
-</ol>
-
-<h2 id="general-checks">General Checks</h2>
-<ol>
-  <li>Step 1</li>
-  <li>Step 2</li>
-  <li>Step 3</li>
+		<ol>
+  <li>Check all bookings for the next day and set tables accordingly</li>
+  <li>All tables should have salt flakes, matching water glasses, wine glasses and promotional drinks</li>
+  <li>All candles should be removed, changed and put away in Station 3 in Sorrento Room in the left hand side cupboard.</li>
+  <li>Check that all stations are properly organized.</li>
+  <li>Check all lights from the fridges are off.</li>
+  <li>Glasswasher has to be turned off and drained.</li>
+  <li>Check all bins have been cleaned and have a new bin bag. Don’t leave an open bag with food scraps.</li>
+  <li>The Green bag with dirty linen has to be taken outside. A new one with no dirty linen or tea towels has to be put in the basket.</li>
+  <li>Bring all sugar bowls, salt and pepper, trays, water jars inside from the station outside.</li>
+  <li>Check outside table cloths. If dirty, place them in the green bag in the bar. If they are clean, fold them and leave them on Table 7 to be used for the next day.</li>
+  <li>Wipe with the blue cloth and window cleaner: Front door, tablets, fridge doors and windows if they have fingerprints or marks.</li>
+  <li>Take the black mat of the hallway outside and leave it rolled up in a crate.</li>
+  <li>Take the 3 black mats on the back area, roll them up and leave them in a crate.</li>
+  <li>Check heaters from both sides have been turned off. Switches are placed in the two switch cupboards at the front.</li>
+  <li>Check all outside lights are off.
+    <ul>
+      <li>Turn off all A/C systems.</li>
+      <li>Capri Room: Remote in switch cupboard.</li>
+      <li>Bar: Remote in the Bar</li>
+      <li>Sorrento Room: One remote in the switch cupboard. The other remote on Station 3 next to the Swans.</li>
+    </ul>
+  </li>
+  <li>Check all tablets and EFTPOS machines are connected and charging.</li>
+  <li>Check Windows and both doors are properly locked.</li>
+  <li>Check Gas has been turned off (Horizontal is on, Vertical is off.</li>
+  <li>Check the cool room door is properly shut.</li>
 </ol>
 
 		<footer>
