--- a/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing-bathroom-mens.html
+++ b/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing-bathroom-mens.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
             <h1>Botticelli</h1>
-            <h2>Checklist for Ladies Bathroom</h2>
+            <h2>Checklist for Mens Bathroom</h2>
 		</header>
 
 		<ol>
