--- a/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/index.html
+++ b/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/index.html
@@ -20,7 +20,7 @@
     </li>
   
     <li>
-      <p><a href="/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing-bathroom-mens">Checklist for Ladies Bathroom</a></p>
+      <p><a href="/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing-bathroom-mens">Checklist for Mens Bathroom</a></p>
     </li>
   
     <li>
@@ -36,6 +36,10 @@
     </li>
   
     <li>
+      <p><a href="/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing-outside">Checklist for outside area</a></p>
+    </li>
+  
+    <li>
       <p><a href="/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing-sorrento-station-1">Checklist for Station 1 in Sorrento Room</a></p>
     </li>
   
@@ -45,10 +49,6 @@
   
     <li>
       <p><a href="/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing-sorrento-station-3">Checklist for Station 3 in Sorrento Room</a></p>
-    </li>
-  
-    <li>
-      <p><a href="/2f14f868-80f1-4f1c-9ab5-dcf80c57ef19/closing-stock-copy">Checklist for outside area</a></p>
     </li>
   
     <li>
