--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="http://localhost:4000/what-we-do/">What we do</a></li><li><a href="http://localhost:4000/services/">Our Services</a></li><li><a href="http://localhost:4000/examples-of-digital-transformation/">Examples</a></li><li><a href="http://localhost:4000/about/">About Us</a></li><li><a href="http://localhost:4000/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -62,7 +62,7 @@
 					<h1>About Us</h1>
 				</header>
 				About ATOM Digital - Business Software Consultancy
-				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
+				<span class="image main"><img src="http://localhost:4000/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
 					alt="A team of people working at a desk on laptops" /></span>
 				<span id="scroller"></span>
 				<p>ATOM Digital helps our clients to adopt digital tools and solutions that increase sales, reduce costs and improve productivity.</p>
@@ -121,8 +121,7 @@
 						</script>
 					</div>
 				</div>
-				
-				<!-- Hiding form until I decide how to handle the responses 
+				<iframe width='100%' height='750px' src='https://book.atomdigital.com.au/portal-embed#/customer/16513000000035053' frameborder='0' allowfullscreen='' > </iframe>				<!-- Hiding form until I decide how to handle the responses 
 				<form action="<<TO BE DEFINED>>" method="POST">
 					<div class="field half first">
 						<label for="name">Name</label>
@@ -202,7 +201,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="http://localhost:4000/what-we-do/">What we do</a></li><li><a href="http://localhost:4000/services/">Our Services</a></li><li><a href="http://localhost:4000/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="http://localhost:4000/about/">About Us</a></li><li><a href="http://localhost:4000/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="http://localhost:4000/book-a-meeting/">Book a Consultation</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
@@ -217,11 +216,11 @@
 </body>
 <!-- Scripts -->
 <script src="/assets/js/jquery.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="https://www.atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="https://www.atomdigital.com.au/assets/js/main.js"></script>
+<script src="http://localhost:4000/assets/js/jquery.scrolly.min.js"></script>
+<script src="http://localhost:4000/assets/js/jquery.scrollex.min.js"></script>
+<script src="http://localhost:4000/assets/js/skel.min.js"></script>
+<script src="http://localhost:4000/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="http://localhost:4000/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="http://localhost:4000/assets/js/main.js"></script>
 
 </html>
