--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -42,7 +42,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="http://localhost:4000/what-we-do/">What we do</a></li><li><a href="http://localhost:4000/services/">Our Services</a></li><li><a href="http://localhost:4000/examples-of-digital-transformation/">Examples</a></li><li><a href="http://localhost:4000/about/">About Us</a></li><li><a href="http://localhost:4000/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 	<ul class="actions vertical">
@@ -62,7 +62,7 @@
 					<h1>What we do</h1>
 				</header>
 				We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.
-				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
+				<span class="image main"><img src="http://localhost:4000/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
 					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
 				<p>ATOM Digital is a business software consultancy.</p>
@@ -112,8 +112,7 @@ We act as an extension of our client’s team and provide the skills and experti
 						</script>
 					</div>
 				</div>
-				
-				<!-- Hiding form until I decide how to handle the responses 
+				<iframe width='100%' height='750px' src='https://book.atomdigital.com.au/portal-embed#/customer/16513000000035053' frameborder='0' allowfullscreen='' > </iframe>				<!-- Hiding form until I decide how to handle the responses 
 				<form action="<<TO BE DEFINED>>" method="POST">
 					<div class="field half first">
 						<label for="name">Name</label>
@@ -193,7 +192,7 @@ We act as an extension of our client’s team and provide the skills and experti
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li></ul>
+			<ul class="footer-links"><li><a href="http://localhost:4000/what-we-do/">What we do</a></li><li><a href="http://localhost:4000/services/">Our Services</a></li><li><a href="http://localhost:4000/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="http://localhost:4000/about/">About Us</a></li><li><a href="http://localhost:4000/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="http://localhost:4000/book-a-meeting/">Book a Consultation</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
@@ -208,11 +207,11 @@ We act as an extension of our client’s team and provide the skills and experti
 </body>
 <!-- Scripts -->
 <script src="/assets/js/jquery.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="https://www.atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="https://www.atomdigital.com.au/assets/js/main.js"></script>
+<script src="http://localhost:4000/assets/js/jquery.scrolly.min.js"></script>
+<script src="http://localhost:4000/assets/js/jquery.scrollex.min.js"></script>
+<script src="http://localhost:4000/assets/js/skel.min.js"></script>
+<script src="http://localhost:4000/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="http://localhost:4000/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="http://localhost:4000/assets/js/main.js"></script>
 
 </html>
