--- a/resources/new-page.html
+++ b/resources/new-page.html
@@ -14,9 +14,9 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head><title>About Us | ATOM Digital</title>
+<head><title>Free software resources for business | ATOM Digital | ATOM Digital</title>
 	
-	<meta name="description" content="About ATOM Digital Business Software Consultancy">
+	<meta name="description" content="A set of free tools and resources for business owners and managers from ATOM Digital">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -28,8 +28,7 @@
 
 
 <body>
-	<script>document.body.classList.add("is-loading");</script>
-	
+
 	<!-- Wrapper -->
 <div id="wrapper">
 
@@ -54,47 +53,25 @@
 </nav>
 
 
+
+
 	<!-- Main -->
 	<div id="main" class="alt">
+
 		<!-- One -->
 		<section id="one">
-			
 			<div class="inner">
 				<header class="major">
-					<h1>About Us</h1>
+					<h1>New Resources</h1>
 				</header>
-				About ATOM Digital - Business Software Consultancy
-				<span class="image main"><img src="http://localhost:4000/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
-					alt="A team of people working at a desk on laptops" /></span>
-				<span id="scroller"></span>
-				<p>ATOM Digital helps our clients to adopt digital tools and solutions that increase sales, reduce costs and improve productivity.</p>
-
-<p>We exist to make our clients’ complex software requirements simple, successful and cost effective. By partnering with ATOM Digital, you can focus on what you do best while we look after your digital landscape.</p>
-
-<p>Together, we build better businesses.</p>
-
-<h2 id="principle-consultant---patrick-osullivan">Principle Consultant - <nobr>Patrick O'Sullivan</nobr></h2>
-
-<p>With over 20 years of experience, <nobr>Patrick O'Sullivan</nobr> (<a href="https://www.linkedin.com/in/patrickaosullivan/">LinkedIn</a>)  is a software expert.</p>
-
-<p>Patrick has worked with leading Australia brands like Toyota, Optus, Steadfast and Dulux as well as a range of SMEs and not-for-profit organisations.</p>
-
-<p>Patrick is passionate about bringing cost effective software solutions to growing businesses.</p>
-
-<p>He works closely with each client to ensure ATOM Digital has a meaningful and positive impact that builds a long term relationship.</p>
-
-<div class="box alt">
-	<div class="row 90% uniform">
-		<div class="3u"><span class="image fit"><img src="/assets/images/brands/toyota.jpg" alt="" /></span></div>
-		<div class="3u"><span class="image fit"><img src="/assets/images/brands/optus.png" alt="" /></span></div>
-		<div class="3u"><span class="image fit"><img src="/assets/images/brands/steadfast.png" alt="" /></span></div>
-		<div class="3u$"><span class="image fit"><img src="/assets/images/brands/dulux.png" alt="" /></span></div>
-	</div>
-</div>
+				
+				
 
 			</div>
 		</section>
+
 	</div>
+
 	<!-- Contact -->
 <section id="contact">
 	<div class="inner">
