--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="http://localhost:4000/what-we-do/">What we do</a></li><li><a href="http://localhost:4000/examples-of-digital-transformation/">Examples</a></li><li><a href="http://localhost:4000/about/">About Us</a></li><li><a href="http://localhost:4000/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
+		<li><a href="/services">Services</a></li>
 	</ul>
+		
 	<ul class="actions vertical">
 		<li><a href="#contact-us" class="button special fit">Contact Us</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
@@ -81,16 +83,6 @@
         <p>We help our clients to adopt digital tools and services that increase sales, reduce costs and improve productivity.</p>
       </header>
   </article><article>
-    <a href="/services/" class="link">
-      <span class="image">
-        <img src="assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg" alt="Our Services" />
-      </span>
-    </a>
-      <header class="major">
-        <h2>Our Services</h2>
-        <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
-      </header>
-  </article><article>
     <a href="/examples-of-digital-transformation/" class="link">
       <span class="image">
         <img src="assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg" alt="Examples of Digital Transformation" />
@@ -109,6 +101,16 @@
       <header class="major">
         <h2>About Us</h2>
         <p>About ATOM Digital - Business Software Consultancy</p>
+      </header>
+  </article><article>
+    <a href="/services/" class="link">
+      <span class="image">
+        <img src="assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg" alt="Our Services" />
+      </span>
+    </a>
+      <header class="major">
+        <h2>Our Services</h2>
+        <p>Working with ATOM Digital gives our clients access to specialists, technical resources.</p>
       </header>
   </article></section>
 
@@ -139,7 +141,7 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Contact Us</h3>
-					<p>We offer a free, no obligation consultation to discuss your software needs. Please contact us on the email below and one of our team will get in touch.</p>
+					<p>We offer a free, no obligation consultation to discuss your software needs. Please contact us on the email below or book a consultation via the form.</p>
 					<div>
 						<input aria-label="contact" size="28" id="contactme" value="contact (at) atomdigital.com.au" onClick="contactMeSelect(this)" onfocusout="hideMessage()"></input>
 						<div style="display:none" id="contactSelected">Address selected. Ready to be copied.</div>
@@ -242,7 +244,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/services/">Our Services</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li></ul>
+			<ul class="footer-links"><li><a href="http://localhost:4000/what-we-do/">What we do</a></li><li><a href="http://localhost:4000/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="http://localhost:4000/about/">About Us</a></li><li><a href="http://localhost:4000/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="http://localhost:4000/book-a-meeting/">Book a Consultation</a></li></ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
 				<li>Design: <a href="https://html5up.net" target="_blank" rel="nofollow">HTML5 UP</a></li>
@@ -257,10 +259,10 @@
 </body>
 <!-- Scripts -->
 <script src="/assets/js/jquery.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/jquery.scrolly.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/jquery.scrollex.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/skel.min.js"></script>
-<script src="https://www.atomdigital.com.au/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="https://www.atomdigital.com.au/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="https://www.atomdigital.com.au/assets/js/main.js"></script>
+<script src="http://localhost:4000/assets/js/jquery.scrolly.min.js"></script>
+<script src="http://localhost:4000/assets/js/jquery.scrollex.min.js"></script>
+<script src="http://localhost:4000/assets/js/skel.min.js"></script>
+<script src="http://localhost:4000/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="http://localhost:4000/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="http://localhost:4000/assets/js/main.js"></script>
 </html>
