Adding PDF Download

--- a/about/index.html
+++ b/about/index.html
@@ -185,6 +185,13 @@
 					<hr>
 					<p>We love to work with businesses in Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.</p>
 					<p>This lets us get to know you, your team and your customers so we can help your business better.</p>
+
+				</div>
+				<div class="contact-method">
+					<a href="https://www.atomdigital.com.au/downloads/Business_Software_Consultancy_ATOM_Digital.pdf" target="_blank"><span class="icon alt fa-download"></span>
+					<h3>Get the Guide</h3></a>
+					<p><a href="https://www.atomdigital.com.au/downloads/Business_Software_Consultancy_ATOM_Digital.pdf">Download</a> our PDF guide on how ATOM Digital implements systems and processes that save growing
+						small businesses time and money.</p>
 				</div>
 			</section>
 		</section>
@@ -206,7 +213,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/">LinkedIn</a></li>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-digital-transformation/">Examples of Digital Transformation</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Software Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
