Update pdf links to open in new tab

--- a/services/workflow-automation.html
+++ b/services/workflow-automation.html
@@ -210,7 +210,7 @@
 				<div class="contact-method">
 					<a href="https://www.atomdigital.com.au/downloads/Business_Software_Consultancy_ATOM_Digital.pdf" target="_blank"><span class="icon alt fa-download"></span>
 					<h3>Get the Guide</h3></a>
-					<p><a href="https://www.atomdigital.com.au/downloads/Business_Software_Consultancy_ATOM_Digital.pdf">Download</a> our PDF guide on how ATOM Digital implements systems and processes that save growing
+					<p><a href="https://www.atomdigital.com.au/downloads/Business_Software_Consultancy_ATOM_Digital.pdf" target="_blank">Download</a> our PDF guide on how ATOM Digital implements systems and processes that save growing
 						small businesses time and money.</p>
 				</div>
 			</section>
